[package]
name = "argochain-runtime"
description = "A solochain runtime template built with Substrate, part of Polkadot Sdk."
version = "0.1.0"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = [
	"derive",
	"max-encoded-len",
], workspace = true }
scale-info = { workspace = true }
static_assertions = "1.1.0"
primitive-types = { version = "0.12.0", default-features = false, features = ["codec", "scale-info", "num-traits"] }
array-bytes = "6.1"
hex-literal = "0.4.1"
log={workspace = true}

#===============================================================================================================================#
#===============================================================================================================================#
#===========================================  Substrate       ==================================================================#

sp-api = { workspace = true }
sp-block-builder = { workspace = true }
sp-consensus-aura = { workspace = true }
sp-consensus-grandpa = { workspace = true }
sp-core = { workspace = true }
sp-genesis-builder = { workspace = true }
sp-inherents = { workspace = true }
sp-offchain = { workspace = true }
sp-runtime = { workspace = true }
sp-session = { workspace = true }
sp-transaction-pool = { workspace = true }
sp-version = { workspace = true }
node-primitives = {workspace = true}
sp-std={workspace = true, default-features = false}
sp-authority-discovery = { version = "34.0.0", default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2409"}
sp-consensus-babe = { version = "0.40.0", default-features = false,git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2409" }
sp-staking = { version = "36.0.0", default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2409" }
sp-statement-store = { version = "18.0.0", default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2409"}
sp-io = { version = "38.0.0", default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2409" }
sp-consensus-beefy = {default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2409" }

#===============================================================================================================================#
#===============================================================================================================================#
#===========================================  Substrate Frame ==================================================================#

frame-benchmarking = { workspace = true, optional = true }
frame-executive = { workspace = true }
frame-support = { workspace = true, features = ["experimental"] }
frame-system = { workspace = true }
frame-system-benchmarking = { workspace = true, optional = true }
frame-system-rpc-runtime-api = { workspace = true }


#===============================================================================================================================#
#===============================================================================================================================#
#===========================================  Own Pallets ==================================================================#

# pallet-counter.workspace=true


#===============================================================================================================================#
#===============================================================================================================================#
#===========================================Frontier Pallets ==================================================================#

# fp-account = { workspace = true, features = ["serde"] }
# fp-evm = { workspace = true, features = ["serde"] }
# fp-rpc = { workspace = true }
# fp-self-contained = { workspace = true, features = ["serde"] }
# pallet-base-fee = { workspace = true }
# pallet-dynamic-fee = { workspace = true }
# pallet-ethereum = { workspace = true }
# pallet-evm = { workspace = true }
# pallet-evm-chain-id = { workspace = true }
# pallet-evm-precompile-modexp = { workspace = true }
# pallet-evm-precompile-sha3fips = { workspace = true }
# pallet-evm-precompile-simple = { workspace = true }


#===============================================================================================================================#
#===============================================================================================================================#
#===========================================Substrate Pallets ==================================================================#

pallet-aura = { workspace = true }
pallet-balances = { workspace = true, features = ["insecure_zero_ed"] }
pallet-grandpa = { workspace = true }
pallet-sudo = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-transaction-payment = { workspace = true }
pallet-transaction-payment-rpc-runtime-api = { workspace = true }
pallet-alliance = {  workspace =true ,default-features = false }
pallet-assets = {  workspace =true ,default-features = false }
pallet-authorship = {  workspace =true ,default-features = false }
pallet-babe = {  workspace =true ,default-features = false }
pallet-bags-list = {  workspace =true ,default-features = false }
pallet-bounties = {  workspace =true ,default-features = false }
pallet-democracy = {  workspace =true ,default-features = false }
pallet-election-provider-multi-phase = {  workspace =true ,default-features = false }
pallet-elections-phragmen = {  workspace =true ,default-features = false }
pallet-fast-unstake = {  workspace =true ,default-features = false }
pallet-nis = {  workspace =true ,default-features = false }
pallet-indices = {  workspace =true ,default-features = false }
pallet-identity = {  workspace =true ,default-features = false }
pallet-lottery = {  workspace =true ,default-features = false }
pallet-membership = {  workspace =true ,default-features = false }
pallet-multisig = {  workspace =true ,default-features = false }
pallet-nfts = {  workspace =true ,default-features = false }
pallet-nft-fractionalization = {  workspace =true ,default-features = false }
pallet-nomination-pools = {  workspace =true ,default-features = false}
pallet-offences = {  workspace =true ,default-features = false }
pallet-glutton = {  workspace =true ,default-features = false }
pallet-preimage = {  workspace =true ,default-features = false }
pallet-proxy = {  workspace =true ,default-features = false }
pallet-insecure-randomness-collective-flip = {  workspace =true ,default-features = false }
pallet-ranked-collective = {  workspace =true ,default-features = false }
pallet-recovery = {  workspace =true ,default-features = false }
pallet-referenda = {  workspace =true ,default-features = false }
pallet-remark = {  workspace =true ,default-features = false}
pallet-root-testing = { workspace =true ,default-features = false }
pallet-salary = {  workspace =true ,default-features = false }
pallet-session = {  features = [ "historical" ], git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2409", default-features = false }
pallet-staking = {  workspace =true ,default-features = false}
pallet-staking-reward-curve = {  workspace =true ,default-features = false }
pallet-state-trie-migration = {  workspace =true ,default-features = false }
pallet-statement = {  workspace =true ,default-features = false }
pallet-scheduler = {  workspace =true ,default-features = false}
pallet-society = {  workspace =true ,default-features = false }
pallet-tips = {  workspace =true ,default-features = false }
pallet-treasury = {  workspace =true ,default-features = false }
pallet-asset-tx-payment = {  workspace =true ,default-features = false}
pallet-transaction-storage = {  workspace =true ,default-features = false }
pallet-uniques = {  workspace =true ,default-features = false }
pallet-vesting = {  workspace =true ,default-features = false }
pallet-whitelist = {  workspace =true ,default-features = false }
pallet-tx-pause = {  workspace =true ,default-features = false }
pallet-collective = {  workspace =true ,default-features = false }

#===============================================================================================================================#
#===============================================================================================================================#



frame-election-provider-support = {  workspace =true ,default-features = false }
pallet-asset-conversion = {  workspace =true ,default-features = false }
pallet-asset-rate = {  workspace =true ,default-features = false }
pallet-authority-discovery = {  workspace =true ,default-features = false }
pallet-child-bounties = {  workspace =true ,default-features = false }

pallet-contracts = {  workspace =true ,default-features = false}
pallet-conviction-voting = {  workspace =true ,default-features = false }
pallet-core-fellowship = {  workspace =true ,default-features = false }
pallet-election-provider-support-benchmarking = { version = "37.0.0", default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2409", optional = true }
pallet-im-online = {  workspace =true ,default-features = false }
pallet-message-queue = { workspace =true ,default-features = false }
pallet-mmr = {  workspace =true ,default-features = false }
pallet-nfts-runtime-api = {  workspace =true ,default-features = false}
pallet-nomination-pools-benchmarking = { version = "36.0.0", default-features = false, optional = true, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2409" }
pallet-nomination-pools-runtime-api = {  workspace =true ,default-features = false }
pallet-offences-benchmarking = { version = "38.0.0", git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2409", default-features = false, optional = true }
pallet-session-benchmarking = { version = "38.0.0", git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2409", default-features = false, optional = true }
pallet-staking-runtime-api = {  workspace =true ,default-features = false }
pallet-asset-conversion-tx-payment = {  workspace =true ,default-features = false }
pallet-broker = {  workspace =true ,default-features = false }
pallet-utility = {  workspace =true ,default-features = false }
# pallet-hotfix-sufficients = { workspace = true }






[build-dependencies]
substrate-wasm-builder = { workspace = true, optional = true }



[features]
default = ["std", "with-rocksdb-weights"]
with-rocksdb-weights = []
with-paritydb-weights = []
std = [
	"pallet-whitelist/std",
	"pallet-offences-benchmarking?/std",
	"pallet-election-provider-support-benchmarking?/std",
	"pallet-asset-conversion-tx-payment/std",
	# "pallet-asset-tx-payment/std",
	"frame-system-benchmarking?/std",
	"frame-election-provider-support/std",
	"sp-authority-discovery/std",
	"pallet-asset-conversion/std",
	"pallet-assets/std",
	"pallet-authority-discovery/std",
	"pallet-authorship/std",
	"sp-consensus-babe/std",
	"sp-consensus-beefy/std",
	"sp-consensus-grandpa/std",
	"pallet-babe/std",
	"pallet-bags-list/std",
	"pallet-balances/std",
	"codec/std",
	"pallet-bounties/std",
	"sp-block-builder/std",
	"scale-info/std",
	"pallet-collective/std",
	"pallet-contracts/std",
	# "pallet-contracts-primitives/std",
	"pallet-conviction-voting/std",
	"pallet-core-fellowship/std",
	"pallet-democracy/std",
	"pallet-elections-phragmen/std",
	"pallet-fast-unstake/std",
	"frame-executive/std",
	"pallet-nis/std",
	"pallet-grandpa/std",
	"pallet-im-online/std",
	"pallet-indices/std",
	"sp-inherents/std",
	"pallet-lottery/std",
	"pallet-membership/std",
	"pallet-message-queue/std",
	"log/std",
	"pallet-mmr/std",
	"pallet-multisig/std",
	"pallet-nomination-pools/std",
	"pallet-nomination-pools-runtime-api/std",
	"pallet-nomination-pools-benchmarking?/std",
	"pallet-identity/std",
	"pallet-scheduler/std",
	"pallet-tx-pause/std",
	"node-primitives/std",
	"sp-offchain/std",
	"pallet-offences/std",
	"pallet-glutton/std",
	# "pallet-evm-chain-id/std",
	"pallet-preimage/std",
	"pallet-proxy/std",
	"pallet-broker/std",
	"sp-core/std",
	"pallet-insecure-randomness-collective-flip/std",
	"sp-std/std",
	"pallet-session/std",
	"pallet-session-benchmarking?/std",
	"sp-api/std",
	"sp-runtime/std",
	"sp-staking/std",
	"pallet-staking/std",
	"pallet-staking-runtime-api/std",
	"pallet-state-trie-migration/std",
	"pallet-statement/std",
	"pallet-salary/std",
	"sp-session/std",
	"pallet-sudo/std",
	"frame-support/std",
	"frame-benchmarking/std",
	# "frame-benchmarking-pallet-pov/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"pallet-election-provider-multi-phase/std",
	"pallet-timestamp/std",
	"pallet-tips/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-transaction-storage/std",
	"pallet-treasury/std",
	"pallet-asset-rate/std",
	"sp-transaction-pool/std",
	"sp-statement-store/std",
	"pallet-utility/std",
	"sp-version/std",
	"pallet-society/std",
	"pallet-ranked-collective/std",
	"pallet-referenda/std",
	"pallet-remark/std",
	"pallet-root-testing/std",
	"pallet-recovery/std",
	"pallet-uniques/std",
	"pallet-nfts/std",
	"pallet-nfts-runtime-api/std",
	"pallet-nft-fractionalization/std",
	"pallet-vesting/std",
	"sp-io/std",
	"pallet-child-bounties/std",
	"pallet-alliance/std",
	"substrate-wasm-builder",
	#frontier
	# 'fp-rpc/std',
	# 'fp-evm/std',
	# 'fp-account/std',
	# 'fp-self-contained/std',
	# 'pallet-base-fee/std',
	# 'pallet-dynamic-fee/std',
	# 'pallet-ethereum/std',
	# 'pallet-evm/std',
	# 'pallet-evm-precompile-simple/std',
	# 'pallet-evm-precompile-sha3fips/std',
	# "pallet-evm-precompile-simple/std",
	# "pallet-counter/std",
	# "pallet-hotfix-sufficients/std"

]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-system-benchmarking/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-grandpa/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-sudo/runtime-benchmarks",
	# "pallet-ethereum/runtime-benchmarks",
	# "pallet-evm/runtime-benchmarks",
	# "pallet-alliance/runtime-benchmarks",
	# "pallet-collective/runtime-benchmarks",
	# "pallet-asset-conversion/runtime-benchmarks",
	# "pallet-im-online/runtime-benchmarks",
	# "pallet-nomination-pools-benchmarking/runtime-benchmarks",
	# "pallet-offences-benchmarking/runtime-benchmarks",
	# "pallet-session-benchmarking/runtime-benchmarks"
]
