[package]
name = "argochain-runtime"
description = "A solochain runtime template built with Substrate, part of Polkadot Sdk."
version = "0.1.0"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = [
	"derive",
	"max-encoded-len",
], workspace = true }
scale-info = { workspace = true }

#===============================================================================================================================#
#===============================================================================================================================#
#===========================================  Substrate       ==================================================================#

sp-api = { workspace = true }
sp-block-builder = { workspace = true }
sp-consensus-aura = { workspace = true }
sp-consensus-grandpa = { workspace = true }
sp-core = { workspace = true }
sp-genesis-builder = { workspace = true }
sp-inherents = { workspace = true }
sp-offchain = { workspace = true }
sp-runtime = { workspace = true }
sp-session = { workspace = true }
sp-transaction-pool = { workspace = true }
sp-version = { workspace = true }
node-primitives = {workspace = true}
sp-std={workspace = true}


#===============================================================================================================================#
#===============================================================================================================================#
#===========================================  Substrate Frame ==================================================================#

frame-benchmarking = { workspace = true, optional = true }
frame-executive = { workspace = true }
frame-support = { workspace = true, features = ["experimental"] }
frame-system = { workspace = true }
frame-system-benchmarking = { workspace = true, optional = true }
frame-system-rpc-runtime-api = { workspace = true }


#===============================================================================================================================#
#===============================================================================================================================#
#===========================================Frontier Pallets ==================================================================#


# Frontier
fp-account = { workspace = true, features = ["serde"] }
fp-evm = { workspace = true, features = ["serde"] }
fp-rpc = { workspace = true }
fp-self-contained = { workspace = true, features = ["serde"] }
# Frontier FRAME
pallet-base-fee = { workspace = true }
pallet-dynamic-fee = { workspace = true }
pallet-ethereum = { workspace = true }
pallet-evm = { workspace = true }
pallet-evm-chain-id = { workspace = true }
pallet-evm-precompile-modexp = { workspace = true }
pallet-evm-precompile-sha3fips = { workspace = true }
pallet-evm-precompile-simple = { workspace = true }
pallet-counter.workspace=true

#===============================================================================================================================#
#===============================================================================================================================#
#===========================================Substrate Pallets ==================================================================#

pallet-aura = { workspace = true }
pallet-balances = { workspace = true, features = ["insecure_zero_ed"] }
pallet-grandpa = { workspace = true }
pallet-sudo = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-transaction-payment = { workspace = true }
pallet-transaction-payment-rpc-runtime-api = { workspace = true }
pallet-alliance = {  workspace =true ,default-features = false }
pallet-assets = {  workspace =true ,default-features = false }
pallet-authorship = {  workspace =true ,default-features = false }
pallet-babe = {  workspace =true ,default-features = false }
pallet-bags-list = {  workspace =true ,default-features = false }
pallet-bounties = {  workspace =true ,default-features = false }
pallet-democracy = {  workspace =true ,default-features = false }
pallet-election-provider-multi-phase = {  workspace =true ,default-features = false }
pallet-elections-phragmen = {  workspace =true ,default-features = false }
pallet-fast-unstake = {  workspace =true ,default-features = false }
pallet-nis = {  workspace =true ,default-features = false }
pallet-indices = {  workspace =true ,default-features = false }
pallet-identity = {  workspace =true ,default-features = false }
pallet-lottery = {  workspace =true ,default-features = false }
pallet-membership = {  workspace =true ,default-features = false }
pallet-multisig = {  workspace =true ,default-features = false }
pallet-nfts = {  workspace =true ,default-features = false }
pallet-nft-fractionalization = {  workspace =true ,default-features = false }
pallet-nomination-pools = {  workspace =true ,default-features = false}
pallet-offences = {  workspace =true ,default-features = false }
pallet-glutton = {  workspace =true ,default-features = false }
pallet-preimage = {  workspace =true ,default-features = false }
pallet-proxy = {  workspace =true ,default-features = false }
pallet-insecure-randomness-collective-flip = {  workspace =true ,default-features = false }
pallet-ranked-collective = {  workspace =true ,default-features = false }
pallet-recovery = {  workspace =true ,default-features = false }
pallet-referenda = {  workspace =true ,default-features = false }
pallet-remark = {  workspace =true ,default-features = false}
pallet-root-testing = { workspace =true ,default-features = false }
pallet-salary = {  workspace =true ,default-features = false }
pallet-session = {  features = [ "historical" ], git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2409", default-features = false }
pallet-staking = {  workspace =true ,default-features = false}
pallet-staking-reward-curve = {  workspace =true ,default-features = false }
pallet-state-trie-migration = {  workspace =true ,default-features = false }
pallet-statement = {  workspace =true ,default-features = false }
pallet-scheduler = {  workspace =true ,default-features = false}
pallet-society = {  workspace =true ,default-features = false }
pallet-tips = {  workspace =true ,default-features = false }
pallet-treasury = {  workspace =true ,default-features = false }
pallet-asset-tx-payment = {  workspace =true ,default-features = false}
pallet-transaction-storage = {  workspace =true ,default-features = false }
pallet-uniques = {  workspace =true ,default-features = false }
pallet-vesting = {  workspace =true ,default-features = false }
pallet-whitelist = {  workspace =true ,default-features = false }
# pallet-broker = {  workspace =true ,default-features = false }
pallet-tx-pause = {  workspace =true ,default-features = false }

#===============================================================================================================================#
#===============================================================================================================================#



# frame-election-provider-support = {  workspace =true ,default-features = false }
# # pallet-asset-conversion = {  workspace =true ,default-features = false }
# pallet-asset-rate = {  workspace =true ,default-features = false }
# pallet-authority-discovery = {  workspace =true ,default-features = false }
# pallet-child-bounties = {  workspace =true ,default-features = false }
# pallet-collective = {  workspace =true ,default-features = false }
# pallet-contracts = {  workspace =true ,default-features = false}
# pallet-conviction-voting = {  workspace =true ,default-features = false }
# pallet-core-fellowship = {  workspace =true ,default-features = false }
# pallet-election-provider-support-benchmarking = {  workspace =true ,default-features = false}
# pallet-im-online = {  workspace =true ,default-features = false }
# pallet-message-queue = { workspace =true ,default-features = false }
# pallet-mmr = {  workspace =true ,default-features = false }
# pallet-nfts-runtime-api = {  workspace =true ,default-features = false}
# pallet-nomination-pools-benchmarking = {  workspace =true ,default-features = false }
# pallet-nomination-pools-runtime-api = {  workspace =true ,default-features = false }
# pallet-offences-benchmarking = {  git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2409", default-features = false}
# pallet-session-benchmarking = {  git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2409", default-features = false}
# pallet-staking-runtime-api = {  workspace =true ,default-features = false }
# pallet-asset-conversion-tx-payment = {  workspace =true ,default-features = false }




[build-dependencies]
substrate-wasm-builder = { workspace = true, optional = true }

# [dependencies.pallet-counter]
# path = "../pallets/pallet-counter"

[features]
default = ["std", "with-rocksdb-weights"]
with-rocksdb-weights = []
with-paritydb-weights = []
std = [
	"codec/std",
	"scale-info/std",
	# Substrate
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-consensus-grandpa/std",
	"sp-core/std",
	"sp-genesis-builder/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"substrate-wasm-builder",
	# Substrate FRAME
	"frame-benchmarking/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system-benchmarking?/std",
	"pallet-aura/std",
	"pallet-balances/std",
	"pallet-grandpa/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-counter/std",
	"pallet-transaction-payment/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	# Frontier
	"fp-account/std",
	"fp-evm/std",
	"fp-rpc/std",
	"fp-self-contained/std",
	# Frontier FRAME
	"pallet-base-fee/std",
	"pallet-dynamic-fee/std",
	"pallet-ethereum/std",
	"pallet-evm/std",
	"pallet-evm-chain-id/std",
	"pallet-evm-precompile-modexp/std",
	"pallet-evm-precompile-sha3fips/std",
	"pallet-evm-precompile-simple/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-system-benchmarking/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-grandpa/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-sudo/runtime-benchmarks",
	"pallet-ethereum/runtime-benchmarks",
	"pallet-evm/runtime-benchmarks",
]